[workspace]

members = [
    "src/cmd",
    "src/common",
    "src/proxy",
    "src/web_service",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
keywords = ["Serverless", "Database", "MySql-Proxy"]

[workspace.dependencies]
anyhow = "1"
hashbrown = { version = "0.14", features = ["serde"] }
tikv-jemalloc-ctl = { git = "https://github.com/risingwavelabs/jemallocator.git", rev = "64a2d9" }
tikv-jemallocator = { git = "https://github.com/risingwavelabs/jemallocator.git", features = [
    "profiling",
    "stats",
], rev = "64a2d9" }
metrics = "0.23.0"
metrics-exporter-prometheus = { version = "0.15.0", default-features = false }

[profile.release]
debug = 1
lto = "thin"
split-debuginfo = "packed"
