[package]
name = "cmd"
version = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "my-proxy"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
common = { path = "../common" }
itertools = "0.13.0"
once_cell = "1.18.0"
proxy = { path = "../proxy" }
tikv-jemallocator = { workspace = true, features = ["unprefixed_malloc_on_supported_platforms"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["alloc", "ansi", "env-filter", "fmt", "matchers", "once_cell", "parking_lot", "regex", "registry", "sharded-slab", "smallvec", "std", "thread_local", "time", "tracing", "tracing-log"] }
web_service = { path = "../web_service" }
