[package]
name = "common"
version = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4.31", default-features = false, features = ["clock", "std"] }
coarsetime = "0.1.29"
fs-err = "2"
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
metrics-util = "0.17.0"
once_cell = "1.18.0"
parking_lot = { version = "0.12.1", features = [] }
pprof = { version = "0.13", features = ["flamegraph"] }
tikv-jemalloc-ctl = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.16.0", default-features = false }
libc = { version = "0.2" }

[target.'cfg(target_os = "macos")'.dependencies]
darwin-libproc = { git = "https://github.com/monographdb/darwin-libproc.git", rev = "f493b9a9db7d0ef6edb2ba6dbcac4bf56ec39342" }
libc = { version = "0.2.149" }
mach2 = "0.4"
