[package]
name = "proxy"
version = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
#repository = { workspace = true }

[features]
default = ["tls"]
tls = ["tokio-rustls", "pin-project"]

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.80"
bitflags = "2.6.0"
byteorder = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
coarsetime = "0.1.29"
common = { path = "../common" }
dashmap = "6.0.1"
deadpool = { version = "0.12.1", features = ["managed"] }
futures = { version = "0.3" }
futures-async-stream = "0.2.11"
hex = "0.4.3"
itertools = "0.13.0"
mysql_common = { version = "0.32.0" }
nanoid = "0.4.0"

nom = "7"
num-derive = "0.4"
num-traits = "0.2"
pbjson = "0.7.0"

pin-project = { version = "1", optional = true }
prost = { version = "0.13", default-features = false, features = [
    "prost-derive",
] }
prost-types = "0.13.1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sha1 = "0.10.5"
sha2 = "0.10.7"
strum = "0.26.2"
strum_macros = "0.26.2"
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26.0", optional = true }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.12.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["alloc", "ansi", "env-filter", "fmt", "matchers", "once_cell", "parking_lot", "regex", "registry", "sharded-slab", "smallvec", "std", "thread_local", "time", "tracing", "tracing-log"] }
twox-hash = "1.6.3"

[dev-dependencies]
core_affinity = "0.8.1"

[build-dependencies]
fs-err = "2.11"
indexmap = "2.2.6"
pbjson-build = "0.7.0"
tonic-build = "0.12.0"
